# hekaton-system

./: Cargo.toml
aggregatable-zkcpu/: Cargo.toml
aggregatable-zkcpu/src/: circuit_defs.rs  common.rs  exec_checker.rs  lib.rs  mmu.rs  option.rs  prover.rs  tape.rs  transcript_checker.rs  transcript_utils.rs  util.rs  word.rs
aggregatable-zkcpu/src/cpu/: cpu_state.rs
aggregatable-zkcpu/src/exec_checker/: cpu_answer.rs  cpu_state.rs  exec_tick_mem_data.rs  instruction_result.rs
aggregatable-zkcpu/src/transcript_checker/: mod.rs  processed_transcript_entry.rs  running_evaluation.rs
ark-msm/: Cargo.toml
ark-msm/benches/: bench_with_baseline.rs
ark-msm/src/: batch_adder.rs  bucket_msm.rs  glv.rs  msm.rs  types.rs  utils.rs
ark-msm/tests/: glv_tests.rs  msm_tests.rs
bls12_381/: Cargo.toml
bls12_381/scripts/: base_field.sage.py  scalar_field.sage.py
bls12_381/src/curves/: g1.rs  g2.rs  mod.rs  msm.rs
bls12_381/src/curves/msm/: batched.rs  ext_traits.rs  mod.rs  prefetch.rs
cp-groth16/: Cargo.toml  design.txt
cp-groth16/benches/: bench.rs
cp-groth16/src/: committer.rs  constraint_synthesizer.rs  data_structures.rs  generator.rs  lib.rs  parallel.rs  prover.rs  r1cs_to_qap.rs.old  verifier.rs
distributed-prover/: Cargo.toml  LICENSE
distributed-prover/benches/: microbenchmarks.rs  monolithic.rs
distributed-prover/src/: VKD.rs  aggregation.rs  coordinator.rs  eval_tree.rs  kzg.rs  lib.rs  pairing_ops.rs  portal_manager.rs  poseidon_util.rs  prover.rs  sparse_tree.rs  sparse_tree_constraints.rs  subcircuit_circuit.rs  tree_hash_circuit.rs  util.rs  verifiable_key_directory.rs  worker.rs
docs/: .smalltick_notes.rs.swp  cpu_arch_sketch.md  cpu_arch_sketch.txt  diagram.mmd  smalltick_notes.rs  subcircuit_api_and_protocol.md  todo.txt
mpi-snark/: Cargo.toml  bench_job.sh  new_het.sh  program.sh  setup_bench.sh
mpi-snark/examples/: scatter-gather.rs
mpi-snark/src/: coordinator.rs  data_structures.rs  lib.rs  worker.rs
mpi-test/: Cargo.toml
mpi-test/examples/: scatter-gather.rs
mpi-test/src/: coordinator.rs  data_structures.rs  lib.rs  worker.rs
slurm_scripts/: .janus_cache_g16_keys.sh.swp  bench_job.slurm  compute_core_seconds.sh  get_interactive.sh  janus_bench  janus_bench.sh  janus_cache_g16_keys.sh  janus_setup  janus_setup.sh  janus_startup_cache.sh  janus_worker_job  janus_worker_job.sh  low_mem_task.sh  mpirunscript.sh  myrun.sh  mytask.sh  run_low_mem  run_low_mem.py  run_single_bench  setup_bench  setup_task.sh  srun_janus_bench.sh  srun_janus_setup.sh
slurm_scripts/old/: janus_bench.sh  show_nodes.sh  srun_janus_setup.sh
snarkpack/: Cargo.toml
snarkpack/benches/aggregation/: mod.rs
snarkpack/src/: commitment.rs  inner_product.rs  ip.rs  lib.rs  macros.rs  pairing_check.rs  proof.rs  prover.rs  srs.rs  transcript.rs  utils.rs  verifier.rs
snarkpack/src/data_structures/: mod.rs  proof.rs
snarkpack/src/kzg/: data_structures.rs  mod.rs  prove.rs  verify.rs
snarkpack/src/mmt/: mod.rs  prover.rs  verifier.rs
snarkpack/src/mmt/data_structures/: mod.rs  proof.rs
snarkpack/tests/: aggregation.rs
tinyram-constraints/: Cargo.toml
tinyram-constraints/src/: circuit_defs.rs  lib.rs  mmu.rs  option.rs  tape.rs  test_utils.rs  transcript_utils.rs  util.rs  word.rs
tinyram-constraints/src/cpu/: cpu_state.rs  instruction_result.rs  mod.rs
tinyram-constraints/src/transcript_checker/: mod.rs  processed_transcript_entry.rs  transcript_eval.rs
tinyram-emu/: Cargo.toml
tinyram-emu/src/: encoding.rs  input_tape.rs  instructions.rs  interpreter.rs  lib.rs  memory.rs  mmu.rs  parser.rs  program_state.rs  register.rs  tape.rs  test_utils.rs  tinyram.pest  word.rs
tinyram-emu/src/cpu/: mod.rs  state.rs
tinyram-emu/src/instructions/: encoding.rs  mod.rs  opcode.rs
tinyram-isa/: Cargo.toml
tinyram-isa/src/: lib.rs  machine_code.rs
tinyram_isa/: Cargo.toml
tinyram_isa/src/: .tinyram_isa.rs.swp  constants.rs  instruction_set.rs  interpreter.rs  lib.rs  machine_code.rs  main.rs  parser.rs  tinyram.pest  tinyram_isa.rs
