[workspace]

members = [
    "cp-groth16",
    "snarkpack",
    "distributed-prover",

    "tinyram-emu",
    "tinyram-constraints",
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[patch.crates-io.ark-serialize]
git = "https://github.com/rozbb/algebra.git"
branch = "canonicalserialize-vecdeque"
