[workspace]

members = [
    "cp-groth16",
    "bls12_381",
    "ark-msm",
    "snarkpack",
    "distributed-prover",

    "tinyram-emu",
    "tinyram-constraints",
    "mpi-snark"
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
# incremental = false
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

#[patch.crates-io.ark-serialize]
#git = "https://github.com/rozbb/algebra.git"
#branch = "canonicalserialize-vecdeque"

# [patch.crates-io.ark-r1cs-std]
# git = "https://github.com/arkworks-rs/r1cs-std.git"
# branch = "refactor-uints"

# [patch.crates-io.ark-groth16]
# git = "https://github.com/arkworks-rs/groth16.git"
# branch = "bump-version-and-fixes"
