[workspace]

members = [
    "cp-groth16",
    "bls12_381",
    "mpi-snark",
    "distributed-prover",

    "tinyram-emu",
    "tinyram-constraints",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
# incremental = false
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

# [patch."https://www.github.com/arkworks-rs/ripp".ark-ip-proofs]
# path = "../ripp/ip_proofs"

# [patch."https://www.github.com/arkworks-rs/ripp".ark-inner-products]
# path = "../ripp/inner_products"

# [patch.crates-io.ark-r1cs-std]
# git = "https://github.com/arkworks-rs/r1cs-std.git"
# branch = "refactor-uints"

# [patch.crates-io.ark-groth16]
# git = "https://github.com/arkworks-rs/groth16.git"
# branch = "bump-version-and-fixes"
