[package]
name = "cp-groth16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.1"
ark-ff = "0.4.1"
ark-groth16 = "0.4.0"
ark-poly = "0.4.1"
ark-r1cs-std = "0.4"
ark-relations = { version = "0.4.0", features = ["std"] }
ark-serialize = "0.4.1"
ark-std = "0.4.0"

[dev-dependencies]
ark-bls12-381 = "0.4"
ark-r1cs-std = "0.4"
