[package]
name = "ark-cp-groth16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false } 
ark-relations = { version = "0.4.0", default-featuers = false }
ark-serialize = { version = "0.4.0", default-featuers = false }
ark-std = { version = "0.4.0", default-featuers = false }
rayon = { version = "1.5.1", default-features = false, optional = true }

[dev-dependencies]
ark-bls12-381 = "0.4"
ark-r1cs-std = "0.4"

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-serialize/std" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-serialize/std", "rayon"]
