[package]
name = "distributed-prover"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2021"
readme = "README.md"
version = "0.1.0"
license = "MIT/Apache-2.0"
keywords = ["cryptography", "crypto", "zero-knowledge", "snark"]
categories = ["cryptography", "no-std"]

[dependencies]
ark-bls12-381 = { path = "../bls12_381" }
ark-ff = {version = "0.4", default-features = false }
ark-poly = { version = "0.4.0" }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
ark-cp-groth16 = { path = "../cp-groth16", default-features = false }
ark-std = "0.4.0"
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["merkle_tree", "r1cs"] }
ark-ec = "0.4.2"
rand_chacha = "0.3.1"
rayon = "1.8.0"
merlin = "3.0.0"

[dev-dependencies]
criterion = "0.5.1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2"

[features]
default = ["asm", "parallel"]
print-trace = ["ark-std/print-trace"]
std = ["ark-ff/std", "ark-poly/std", "ark-r1cs-std/std", "ark-serialize/std", "ark-relations/std"]
asm = ["ark-ff/asm"]
parallel = ["ark-ff/parallel", "ark-poly/parallel", "ark-r1cs-std/parallel", ]

[[bench]]
name = "microbenchmarks"
harness = false
required-features = ["asm", "parallel"]
