[package]
name = "mpi-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.4" }
ark-std = { version = "0.4", features = ["parallel"] }
ark-ff = { version = "0.4", features = ["parallel"] }
ark-ec = { version = "0.4", features = ["parallel"] }
ark-bls12-381 = { path = "../bls12_381", features = ["parallel"] }
ark-cp-groth16 = { path = "../cp-groth16" }
mpi = { version = "0.6.0", features = [ "derive" ] }
distributed-prover = { path = "../distributed-prover" }
rayon = { version = "1" }
rand = "0.8.5"
clap = { version = "4.4.6", features = ["derive"] }


[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'


[patch.crates-io.ark-serialize]
git = "https://github.com/rozbb/algebra.git"
branch = "canonicalserialize-vecdeque"
