[package]
name = "mpi-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.4" }
ark-std = { version = "0.4", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.4", default-features = false, features = ["parallel", "asm"] }
ark-ec = { version = "0.4", default-features = false, features = ["parallel"] }
ark-bls12-381 = { path = "../bls12_381",  features = ["parallel"] }
ark-cp-groth16 = { path = "../cp-groth16", default-features = false }
mpi = { version = "0.7.0" }
distributed-prover = { path = "../distributed-prover", default-features = false, features = ["asm"] }
rayon = { version = "1" }
rand = "0.8.5"
clap = { version = "4.4.6", default-features = false, features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }

[features]
default = []#"print-trace"]
print-trace = ["ark-std/print-trace"]


[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'


[patch.crates-io.ark-serialize]
git = "https://github.com/rozbb/algebra.git"
branch = "canonicalserialize-vecdeque"
