[package]
name = "mpi-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false, features = ["asm"] }
ark-ec = { version = "0.4", default-features = false }
ark-bls12-381 = { path = "../bls12_381" }
ark-cp-groth16 = { path = "../cp-groth16", default-features = false }
mpi = { version = "0.7.0" }
distributed-prover = { path = "../distributed-prover", default-features = false, features = ["asm"] }
rayon = { version = "1", optional = true }
rand = "0.8.5"
clap = { version = "4.4.6", default-features = false, features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }
itertools = "0.11"

[features]
default = []#"print-trace"]
print-trace = ["ark-std/print-trace"]
all_parallel = [
    "ark-ff/parallel", 
    "ark-ec/parallel", 
    "ark-bls12-381/parallel", 
    "ark-cp-groth16/parallel", 
    "distributed-prover/parallel", 
    "parallel"
]
parallel = ["rayon"]


[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'


[patch.crates-io.ark-serialize]
git = "https://github.com/rozbb/algebra.git"
branch = "canonicalserialize-vecdeque"
