[package]
name = "mpi-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.4" }
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
mpi = { version = "0.6.0", features = [ "derive" ] }
distributed-prover = { path = "../distributed-prover" }

[patch.crates-io.ark-serialize]
git = "https://github.com/rozbb/algebra.git"
branch = "canonicalserialize-vecdeque"